# mapbox-manager

./: .env.example  .gitignore  LICENSE  README.md  go.mod  go.sum  main.go  output.json  pyproject.toml
cmd/: check.go  checkFlags.go  config.go  configure.go  get.go  root.go  style.go  update.go  util.go
mapboxctl/: __init__.py  cli.py  log.py
mapboxctl/cmd/: datasets.py
pkg/config/: config.go
pkg/httpclient/: client.go  status.go
pkg/layer/: format.go  layer.go
pkg/mapbox/: errors.go  layer.go  shared.go  sources.go  style.go  style_test.go  tileset.go
pkg/resource/: httpclient.go  resource.go  style.go  style_test.go
pkg/style/: format.go  style.go  style_test.go
pkg/writer/: writer.go
