[tool.poetry]
name = "mapboxctl"
version = "0.1.0"
description = "Mapbox resource management CLI"
authors = ["Sebastian Nyberg <seb.nyberg90@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
